avoid that KWrite stores/restores view config

the setting is not there in the config dialog by design
the default value was not well choosen
just skip this for KWrite

BUG: 459366